force-app/main/default/objects/Assignment__c/fields/Assignment_Shipped__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Shipped__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assignment Shipped</label>
    <type>Checkbox</type>
</CustomField>