force-app/main/default/objects/Assignment__c/fields/Exchange__c.field-meta.xml
<CustomField>
    <fullName>Exchange__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Exchange</label>
    <referenceTo>Exchange__c</referenceTo>
    <relationshipLabel>Assignments</relationshipLabel>
    <relationshipName>Assignments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>