force-app/main/default/objects/Assignment__c/fields/Gift_Status__c.field-meta.xml
<CustomField>
    <fullName>Gift_Status__c</fullName>
    <formula>TEXT(Recipient__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gift Shipment Status</label>
    <type>Text</type>
</CustomField>