force-app/main/default/objects/Assignment__c/fields/Giftee__c.field-meta.xml
<CustomField>
    <fullName>Giftee__c</fullName>
    <formula>Recipient__r.Owner:User.FirstName + &quot; &quot; +  Recipient__r.Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Giftee</label>
    <type>Text</type>
</CustomField>