force-app/main/default/objects/Assignment__c/fields/Unmask_Yourself_to_Giftee__c.field-meta.xml
<CustomField>
    <fullName>Unmask_Yourself_to_Giftee__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do you want us to reveal your secret identity to your gift recipient?</inlineHelpText>
    <label>Unmask Yourself to Giftee</label>
    <type>Checkbox</type>
</CustomField>