force-app/main/default/objects/Assignment__c/validationRules/no_regression.validationRule-meta.xml
<ValidationRule>
    <fullName>no_regression</fullName>
    <active>true</active>
    <errorConditionFormula>CASE(  Status__c  , 
&quot;Assigned&quot;,1, 
&quot;Gift Shipped&quot;,2, 
&quot;Gift Received&quot;,3,
&quot;Late&quot;,4,
&quot;Dropped&quot;,5,0)
&lt; 
CASE(PRIORVALUE(Status__c) , 
&quot;Assigned&quot;,1, 
&quot;Gift Shipped&quot;,2, 
&quot;Gift Received&quot;,3,
&quot;Late&quot;,0,
&quot;Dropped&quot;,5,0)</errorConditionFormula>
    <errorMessage>&quot;You can never go back&quot; - Daphne Du Maurier</errorMessage>
</ValidationRule>