force-app/main/default/objects/Assignment__c/listViews/My_Assignments.listView-meta.xml
<ListView>
    <fullName>My_Assignments</fullName>
    <columns>NAME</columns>
    <columns>Giftee__c</columns>
    <columns>Recipient__c</columns>
    <columns>Exchange__c</columns>
    <columns>Tracking_Number__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Assignments</label>
</ListView>